# fr-toolbelt

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  tests.py
.github/workflows/: python-package.yml
fr_toolbelt/: __init__.py  __main__.py
fr_toolbelt/api_requests/: __init__.py  duplicates.py  format_dates.py  get_documents.py
fr_toolbelt/preprocessing/: __init__.py  agencies.py  agencies2.py  dates.py  dockets.py  documents  documents.py  duplicates.py  fields.py  presidents.py  rin.py
fr_toolbelt/utils/: __init__.py  duplicates.py  format_dates.py
src/fr_toolbelt/: __init__.py
src/fr_toolbelt/api_requests/: __init__.py  get_documents.py
src/fr_toolbelt/preprocessing/: __init__.py  agencies.py  dockets.py  documents.py  fields.py  presidents.py  rin.py
src/fr_toolbelt/utils/: __init__.py  duplicates.py  format_dates.py
tests/: __main__.py  test_api_requests_get_documents.py  test_api_requests_parse_document_numbers.py  test_documents.json  test_preprocessing_agencies.py  test_preprocessing_dockets.py  test_preprocessing_documents.py  test_preprocessing_presidents.py  test_preprocessing_rin.py  test_utils_duplicates.py  test_utils_format_dates.py  tests.py
